# Synca

./: .gitignore  CMakeLists.txt
examples/: data.cpp  server.cpp
include/: channel.h  common.h  core.h  coro.h  coro_new.h  data.h  gc.h  goer.h  helpers.h  journey.h  mt.h  network.h  portal.h
src/: core.cpp  coro.cpp  coro_new.cpp  coro_old.cpp  gc.cpp  goer.cpp  journey.cpp  mt.cpp  network.cpp  portal.cpp
tools/: serverTester.txt
